# Selim_BSc_project

./: Combi_Pwc.ipynb  Combi_Pwc_nilm.ipynb  Combi_Refit_Agg.ipynb  Combi_Refit_AggS.ipynb  Combi_Refit_AggS_nilm.ipynb  Data_analysis_Pwc_dbscan.ipynb  Data_analysis_REFIT_dbscan.ipynb  Data_analysis_REFIT_dbscan_agg.ipynb  Figures_pwc.ipynb  README.md  Results_Abl.ipynb  Results_Abl_pwc.ipynb  Temp_data.py  XG_Pwc_nilm_Abl.ipynb  XG_Refit_nilm_Abl.ipynb  main.py  pyproject.toml  setup.ps1  setup.sh
Predictions/: Pwc_12689_complete.csv  Pwc_12689_nilm_complete.csv  Refit_forecasts_Combi_AggS_complete.csv  Refit_forecasts_Combi_AggS_nilm_complete.csv  Refit_forecasts_Combi_Agg_complete.csv  ablation_results_hourly_house_12.csv  ablation_results_house_12.csv  ablation_results_house_13.csv  ablation_results_house_18.csv  ablation_results_pwc_hourly_house_manolis.csv  ablation_results_pwc_hourly_house_matthijs.csv  ablation_results_pwc_hourly_house_robin.csv  ablation_results_pwc_house_manolis.csv  ablation_results_pwc_house_matthijs.csv  ablation_results_pwc_house_robin.csv
