[project]
name = "selim-bsc-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "graphviz>=0.21",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openmeteo-requests>=1.7.5",
    "pandas>=2.3.3",
    "requests-cache>=1.3.1",
    "retry-requests>=2.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
